<resources>
    <string name="app_name">Pet L&amp;F</string>
    <string name="title_home">Home</string>
    <string name="title_found">Found</string>
    <string name="title_account">Account</string>
    <string name="title_lost">Lost</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="welcome_text">Welcome</string>
    <string name="most_recent_lost_title">Most Recent Lost:</string>
    <string name="most_recent_found_title">Most Recent Found:</string>
    <string name="Signin_button_text">Sign In</string>
    <string name="Signup_button_text">Sign Up</string>
    <string name="signin_dialog_title">Sign In</string>
    <string name="signup_dialog_title">Sign Up</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dialog_email_text">Your Email</string>
    <string name="dialog_password_text">Your Password</string>
    <string name="dialog_confirm_email_text">Confirm Your Password</string>
    <string name="button_myposts_text">My Posts</string>
    <string name="button_logout_text">Log Out</string>
    <string name="button_contact_us_text">Contact Us</string>
    <string name="email_diaplay_text">Email: %s</string>
    <string name="button_delete">Delete</string>
    <string name="email_not_log_in">You Are Not Login!</string>
    <string name="error">Error!</string>
    <string name="invalid_password">Password is too short!</string>
    <string name="email_required">Email is required!</string>
    <string name="invalid_email">The email address is invalid!</string>
    <string name="invalid_confirmation_password">Two passwords are different!</string>
    <string name="button_reset_password_text">Reset Password</string>
    <string name="re_upload_the_images">Re-Upload the images</string>
    <string name="upload_image"><![CDATA[Upload image--->>]]></string>
</resources>
