<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.rosehulman.lix4.petlf.fragments.AccountFragment">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="@dimen/profile_pic_width"
        android:layout_height="@dimen/profile_pic_height"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:background="@drawable/ic_image_view_border" />


    <TextView
        android:id="@+id/email_display_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="11dp"
        android:text="@string/email_diaplay_text"
        android:textSize="@dimen/email_display_text_size" />

    <Button
        android:id="@+id/button_myposts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email_display_text_view"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:text="@string/button_myposts_text" />

    <Button
        android:id="@+id/button_logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/button_myposts"
        android:layout_alignLeft="@+id/button_myposts"
        android:layout_alignRight="@+id/button_myposts"
        android:layout_alignStart="@+id/button_myposts"
        android:layout_below="@+id/button_myposts"
        android:layout_marginTop="15dp"
        android:text="@string/button_logout_text" />

    <Button
        android:id="@+id/button_contact_us"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="66dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/button_contact_us_text" />

</RelativeLayout>
